# szum2023

s2-data-prep/imager/: Makefile  gen_makefile.py  main.py
s2-data-prep/normalizercxx/: .clangd  .gitignore  CMakeLists.txt  main.cpp
s2-data-prep/normalizercxx/winbuilds/: HOW TO USE.txt
s2-data-prep/splitter/: main.py
s3-s4-model/: .~lock.initial-training.ods#  initial-training.ods  main.py  requirements.txt
s3-s4-model/splits/: split1_test.csv  split1_train.csv  split1_val.csv  split2_train.csv  split2_val.csv  split3_test.csv  split3_train.csv
s3-training/: main.py
s3-training/splits/: split1_test.csv  split1_train.csv  split1_val.csv  split2_train.csv  split3_test.csv  split3_train.csv  split3_val.csv
